# rhesis

./: .codecov.yml  .dockerignore  .env.docker.local  .env.example  .env.example.local  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_SDK_TEST_ANALYSIS.md  CONTRIBUTING.md  DOCKER_README.md  FLOW_DIAGRAM.md  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_637.md  LICENSE  MULTI_INSTANCE_SDK_FIX.md  NOTICE  ONBOARDING_IMPLEMENTATION.md  PR_CHECKER_BACKEND_ISSUES.md  README.md  README_IMPLEMENTATION.md  RELEASING.md  SELF_HOSTED_RHESIS_USER_GUIDE.md  TELEMETRY_IMPLEMENTATION.md  backend_testing_implementation_plan.md  chord_execution_investigation_summary.md  docker-compose.ghcr.yml  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml  env.docker  env.example  migrate_to_tenant_db_session.py  new_file.py  package-lock.json  package.json  (+16 more)
agents/dr-rhesis/: .env.example  README.md  pyproject.toml
agents/dr-rhesis/chat_terminal/: chat.py  run
agents/dr-rhesis/docs/: architecture.md
agents/dr-rhesis/examples/: chat_cli.py  run_scenarios.py  serve_playground.py
agents/dr-rhesis/src/dr_rhesis/: __init__.py  __main__.py  app.py  client.py  pipeline.py  safety.py  session.py  state.py  terminals.py  tools.py  utils.py
agents/dr-rhesis/tests/: conftest.py  mocks.py  test_adversarial.py  test_app_threadpool.py  test_gathering.py  test_pipeline.py  test_pipeline_numeric_message.py  test_router.py  test_safety.py  test_session_concurrency.py  test_state.py  test_terminals.py  test_utils.py
agents/polymath/: .env.example  README.md  pyproject.toml
agents/polymath/docs/: architecture.md
agents/polymath/examples/: local_client.py  run_traces.py
agents/polymath/src/polymath/: __init__.py  __main__.py  app.py  client.py  utils.py  workflow.py
agents/research-assistant/: .gitignore  README.md  pyproject.toml
agents/research-assistant/docs/: architecture.md
agents/research-assistant/examples/: test_scenarios.py
agents/travel-agent/: .env.example  README.md  pyproject.toml
agents/travel-agent/docs/: architecture.md
agents/travel-agent/examples/: run_traces.py  serve_playground.py
apps/backend/: .env.docker  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.unified  Makefile  README.md  migrate.sh  pyproject.toml  start.sh
apps/backend/scripts/: migrate_files_to_storage.py  recover_org_owner.py  send_migration_reset_emails.py  sim_cloud_migration.py
apps/chatbot/: Dockerfile  README.md  chatbot.py  client.py  demo_tracing.py  endpoint.py  example.py  notifications.py  parameters_bootstrap.py  pyproject.toml  requirements.txt  session_store.py  test_rate_limiting.py
apps/chatbot/use_cases/: baufinanzierung.md  coding.md  finance.md  health.md  image_analysis.md  image_editing.md  image_generation.md  insurance.md  legal.md  travel.md
apps/developer-tools/: pyproject.toml  seed_dev_resources.sh
apps/developer-tools/mock_chatbot/: README.md  main.py  start.sh
apps/developer-tools/mock_llm/: README.md  main.py  pyproject.toml  start.sh
apps/developer-tools/trace_stress/: main.py  start.sh
apps/polyphemus/: CHANGELOG.md  Dockerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
apps/polyphemus/api/: __init__.py  schemas.py
apps/polyphemus/model-deployment/: .env.example  README.md  __init__.py  config.py  deploy.py  utils.py
apps/polyphemus/model_deployment/: .env.example  README.md  __init__.py  config.py  deploy.py  utils.py
apps/polyphemus/models/: __init__.py  inference.py  model_loader.py
apps/polyphemus/utils/: __init__.py
apps/polyphemus/vertex_ai/: __init__.py  config.py  deploy.py  requirements.txt  utils.py
apps/telemetry-processor/: Dockerfile  README.md  migrate.sh  pyproject.toml
apps/telemetry-processor/alembic/: env.py
apps/telemetry-processor/src/: processor.py
apps/worker/: .dockerignore  Dockerfile  README.md  health_server.py  pyproject.toml  queue_monitor.py  requirements.txt  runner.py  start.sh  stop_retries.py  task_manager.py
apps/worker/k8s/: deployment-worker-celery.yaml  deployment-worker-execution.yaml  deployment-worker-telemetry.yaml  deployment.yaml  hpa-example.yaml  kustomization.yaml  networkpolicy.yaml  service.yaml  serviceaccount.yaml
ee/backend/: CHANGELOG.md  README.md  pyproject.toml
examples/telemetry/: README.md  basic_example.py  crewai_example.py  env.example  fastapi_example.py  haystack_example.py  langchain_example.py  langgraph_example.py  llamaindex_example.py  openai_sdk_example.py  pydantic_ai_example.py  pydantic_ai_multi_agent_example.py  pyproject.toml
penelope/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MULTI_TURN_METRICS_DESIGN.md  Makefile  README.md  penelope_execution_trace.json  pyproject.toml
penelope/examples/: README.md  basic_example.py  batch_testing.py  common_args.py  compliance_testing.py  custom_tools.py  edge_case_discovery.py  haystack_minimal.py  insurance_fraud_attack.py  langchain_example.py  langchain_minimal.py  langgraph_example.py  langgraph_minimal.py  langgraph_with_metrics.py  maf_minimal.py  microsoft_agent_framework_minimal.py  multi_metric_evaluation.py  platform_integration.py  pydantic_ai_minimal.py  security_testing.py  test_multi_turn_continuity.py  testing_with_restrictions.py  turn_budget_validation.py
penelope/src/rhesis/: __init__.py  py.typed
penelope/tests/: test_file_prompting.py  test_three_scenarios.py
penelope/tinkerers/: 03_example_advanced_failure.py  README.md  example_basic.py  example_basic_failures.py  example_comprehensive.py  example_failure_demo.py  marvin.md  marvin_agent.py  metrics.py
sdk/: .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  METRICS_REFACTORING_PLAN.md  Makefile  README.md  hatch_build.py  pyproject.toml  sequence_classification_tests.csv
sdk/examples/: conversational_judge_demo.py  conversational_metrics_demo.py  deepeval_conversational_demo.py  native_conversational_demo.py
sdk/src/rhesis/: __init__.py
(+5167 files in other folders)
