[project]
name = "rhesis-penelope"
version = "0.1.0"
description = "Intelligent multi-turn testing agent for AI applications"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Engineering Team", email = "engineering@rhesis.ai" },
    { name = "Harry Cruz", email = "harry@rhesis.ai" },
    { name = "Nicolai Bohn", email = "nicolai@rhesis.ai" },
]
keywords = [
    "llm",
    "testing",
    "ai",
    "agents",
    "multi-turn",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rhesis-sdk",
    "pydantic>=2.0.0",
    "tenacity>=8.2.3",
    "rich>=13.0.0",
    "tiktoken>=0.9.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.0.0",
    "notebook>=7.5.6",
    "ipykernel>=6.0.0",
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://rhesis.ai"
Repository = "https://github.com/rhesis-ai/rhesis"
Documentation = "https://docs.rhesis.ai"
"Bug Tracker" = "https://github.com/rhesis-ai/rhesis/issues"

[project.optional-dependencies]
langchain = [
    "langchain>=1.3.9",
    "langchain-core>=1.3.3",
    "langchain-google-genai>=2.0.0",
]
langgraph = [
    "langgraph>=0.2.0",
    "langchain-core>=1.3.3",
    "langchain-google-genai>=2.0.0",
]
pydantic-ai = [
    "pydantic-ai>=0.0.49",
]
# Pin the agent-framework subpackages directly rather than the ``agent-framework``
# meta-package: the meta-package drags in an ``agent-framework-azure-ai-search``
# stub whose empty ``agent_framework/__init__.py`` can clobber the real one.
microsoft-agent-framework = [
    "agent-framework-core>=1.1.0",
    "agent-framework-openai>=1.1.0",
]
all = [
    "langchain>=1.3.9",
    "langchain-core>=1.3.3",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "pydantic-ai>=0.0.49",
    "agent-framework-core>=1.1.0",
    "agent-framework-openai>=1.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "hatch>=1.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.15.0",
    "types-requests>=2.32.0",
    "ruff>=0.11.6",
    "pyright>=1.1.406",
    # pydantic-ai installed in dev so tests/penelope/targets/test_pydantic_ai.py
    # runs without ``--all-extras``. End users install via the
    # ``rhesis-penelope[pydantic-ai]`` optional extra.
    "pydantic-ai>=0.0.49",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rhesis"]
include = ["src/rhesis/py.typed"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
exclude-newer = "1 week"
# Allow newer versions for packages with recent security patches (CVEs).
exclude-newer-package = { jupyter-server = false, mistune = false, notebook = false, pydantic-settings = false, langsmith = false, langchain = false, langchain-core = false, litellm = false, aiohttp = false, tornado = false, starlette = false, pyjwt = false, pyarrow = false, bleach = false, cryptography = false, python-multipart = false, jupyterlab = false }
# Force minimum versions for transitive dependencies with security advisories
constraint-dependencies = [
    "pyasn1>=0.6.3",
    "orjson>=3.11.7",
    "tornado>=6.5.7",
    "gitpython>=3.1.50",
    "mistune>=3.2.1",
    "jupyterlab>=4.5.9",
    "jupyter-server>=2.20.0",
    "notebook>=7.5.6",
    "langchain-core>=1.3.3",
    "langchain-classic>=1.0.7",
    "langsmith>=0.8.18",
    "urllib3>=2.7.0",
    "idna>=3.15",
    "python-multipart>=0.0.31",
    "starlette>=1.3.1",
    "pyjwt>=2.13.0",
    "aiohttp>=3.14.1",
    "cryptography>=48.0.1",
    "bleach>=6.4.0",
    "pyarrow>=23.0.1",
    "litellm>=1.84.0",
    "pydantic-settings>=2.14.2",
]
# Match sdk: litellm>=1.83.7 metadata vs deepeval/python-dotenv and pydantic pins.
override-dependencies = [
    "python-dotenv>=1.2.2",
    "pydantic>=2.13.0",
    "openai>=2.26.0",
]

[tool.uv.sources]
rhesis-sdk = { path = "../sdk", editable = true }

[tool.pyright]
typeCheckingMode = "standard"
include = ["src/rhesis/penelope"]

[tool.pytest.ini_options]
testpaths = ["../tests/penelope"]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for complete workflows",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestDeprecationWarning:pytest_asyncio.plugin",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I", "E", "F"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["rhesis.sdk", "rhesis.penelope"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
