[project]
name = "rhesis-sdk"
version = "0.4.0"
description = "SDK for testing and validating LLM applications"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Engineering Team", email = "engineering@rhesis.ai" },
    { name = "Harry Cruz", email = "harry@rhesis.ai" },
    { name = "Nicolai Bohn", email = "nicolai@rhesis.ai" },
]
keywords = [
    "llm",
    "testing",
    "ai",
    "machine-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.2",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20241221",
    "jinja2>=3.1.6",
    "hatch>=1.14.1",
    "markitdown[pdf,docx,pptx,xlsx]>=0.1.0",
    "tomli>=2.2.1",
    "tomli-w>=1.2.0",
    "deepeval==3.0.0",
    "tenacity>=8.2.3",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "litellm>=1.76.0",
    "torch>=2.8.0",
    "transformers>=4.56.0",
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://rhesis.ai"
Repository = "https://github.com/rhesis-ai/rhesis"
Documentation = "https://rhesis-sdk.readthedocs.io"
"Bug Tracker" = "https://github.com/rhesis-ai/rhesis/issues"

[project.optional-dependencies]
examples = [
    "jupyter",
    "matplotlib",
    "pandas",
]

[project.scripts]
rhesis = "rhesis.sdk.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "hatch>=1.14.1",
    "pytest>=8.3.4",
    "mypy==1.15.0",
    "types-requests>=2.32.0",
    "pandas-stubs>=2.2.3.250308",
    "types-pytz>=2025.2.0.20250326",
    "types-tqdm>=4.67.0.20241221",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-rtd-theme>=3.0.2",
    "myst-parser>=4.0.0",
    "ruff>=0.11.6",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/rhesis",
]
include = [
    "src/rhesis/py.typed",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "I",
    "E",
    "F",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
]
"tests/*" = [
    "S101",
]

[tool.ruff.lint.isort]
known-first-party = [
    "rhesis.sdk",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "0.2.0"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
packages = [
    "rhesis.sdk",
]
overrides = []

[tool.pytest.ini_options]
testpaths = [
    "../tests/sdk",
]
pythonpath = [
    "src",
]
