[project]
name = "dr-rhesis"
version = "0.1.0"
description = "Dr-Rhesis: a Haystack multi-agent demo for doctor visit preparation"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Engineering Team", email = "engineering@rhesis.ai" },
]
keywords = [
    "llm",
    "ai",
    "agents",
    "multi-agent",
    "health",
    "haystack",
    "telemetry",
    "rhesis",
]
dependencies = [
    "rhesis-sdk",
    "haystack-ai>=2.0.0",
    "google-genai-haystack>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.license]
text = "MIT"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dr_rhesis"]

[tool.uv]
exclude-newer = "1 week"
exclude-newer-package = { pydantic-settings = false, langsmith = false, litellm = false, aiohttp = false, tornado = false, starlette = false, pyjwt = false, cryptography = false, python-multipart = false, gitpython = false, langchain-classic = false, langchain-core = false, idna = false }
constraint-dependencies = [
    "pyasn1>=0.6.3",
    "orjson>=3.11.7",
    "tornado>=6.5.7",
    "aiohttp>=3.14.1",
    "langchain-openai>=1.1.14",
    "langchain-core>=1.3.3",
    "langchain-classic>=1.0.7",
    "gitpython>=3.1.50",
    "idna>=3.15",
    "starlette>=1.3.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.31",
    "langsmith>=0.8.18",
    "litellm>=1.84.0",
    "pydantic-settings>=2.14.2",
]
override-dependencies = [
    "python-dotenv>=1.2.2",
    "pydantic>=2.13.0",
]

[tool.uv.sources]
rhesis-sdk = { path = "../../sdk", editable = true }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I", "E", "F"]

[tool.ruff.lint.isort]
known-first-party = ["dr_rhesis", "rhesis.sdk"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
