[project]
name = "travel-agent"
version = "0.1.0"
description = "Travel Agent: a Microsoft Agent Framework multi-agent demo for Rhesis SDK trace testing"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Engineering Team", email = "engineering@rhesis.ai" },
]
keywords = [
    "llm",
    "ai",
    "agents",
    "multi-agent",
    "travel",
    "microsoft-agent-framework",
    "telemetry",
    "rhesis",
]
dependencies = [
    # Depend on rhesis-sdk WITHOUT the [agent-framework] extra so we don't drag
    # in the agent-framework "all" meta-package; that extra ships a buggy
    # `agent-framework-azure-ai-search` stub whose empty
    # `agent_framework/__init__.py` overwrites the real one. We pin the
    # individual MAF subpackages we actually need below instead.
    "rhesis-sdk",
    "agent-framework-core>=1.1.0",
    "agent-framework-openai>=1.1.0",
    "agent-framework-orchestrations>=1.0.0b260421",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "cryptography>=48.0.1",
    "pillow>=12.2.0",
]

[project.license]
text = "MIT"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/travel_agent"]

[tool.uv]
exclude-newer = "1 week"
exclude-newer-package = { pydantic-settings = false, langsmith = false, litellm = false, aiohttp = false, tornado = false, starlette = false, pyjwt = false, cryptography = false, python-multipart = false, gitpython = false, langchain-classic = false, langchain-core = false, idna = false }
# Force minimum versions for transitive dependencies with security advisories
constraint-dependencies = [
    "pyasn1>=0.6.3",
    "orjson>=3.11.7",
    "tornado>=6.5.7",
    "aiohttp>=3.14.1",
    "langchain-openai>=1.1.14",
    "langchain-core>=1.3.3",
    "langchain-classic>=1.0.7",
    "gitpython>=3.1.50",
    "idna>=3.15",
    "starlette>=1.3.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.31",
    "langsmith>=0.8.18",
    "litellm>=1.84.0",
    "pydantic-settings>=2.14.2",
]
override-dependencies = [
    "python-dotenv>=1.2.2",
    "pydantic>=2.13.0",
]

[tool.uv.sources]
rhesis-sdk = { path = "../../sdk", editable = true }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I", "E", "F"]

[tool.ruff.lint.isort]
known-first-party = ["travel_agent", "rhesis.sdk"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
