[project]
name = "rhesis-backend"
version = "0.6.2"
description = "Rhesis backend package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary==2.9.9",
    "pgvector>=0.3.0",
    "pydantic",
    "alembic",
    "faker",
    "jinja2",
    "python-dotenv",
    "pyyaml",
    "openpyxl",
    "nanoid",
    "huggingface_hub",
    "python-jose[cryptography]",
    "python-multipart>=0.0.22",
    "authlib",
    "httpx",
    "itsdangerous",
    "chardet",
    "jsonpath-ng==1.7.0",
    "websockets==15.0.1",
    "tenacity==8.2.3",
    "psutil==5.9.5",
    "celery[redis]==5.5.2",
    "kombu==5.5.3",
    "redis==4.6.0",
    "portalocker==3.1.1",
    "yaspin==3.1.0",
    "pyfiglet==1.0.2",
    "odata-query==0.10.0",
    "pathspec==0.12.1",
    "gunicorn>=21.2.0",
    "tomli>=2.0.0",
    "google-genai==1.13.0",
    "mirascope==1.24.0",
    "protobuf>=6.33.5",
    "proto-plus>=1.26.1",
    "email-validator>=2.0.0",
    "slowapi>=0.1.9",
    "rhesis-sdk",
    "rhesis-penelope",
    "gcsfs>=2025.9.0",
    "cryptography>=44.0.3",
    "opentelemetry-api>=1.32.1",
    "opentelemetry-sdk>=1.32.1",
    "opentelemetry-exporter-otlp-proto-http>=1.32.1",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "garak>=0.9.0",
    "mcp-atlassian>=0.13.0",
]

[project.optional-dependencies]
# PyTorch accelerator options - use ONE of these extras
cpu = ["torch>=2.0"]
gpu = ["torch>=2.0"]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
    "hatch>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.15.0",
    "coverage>=7.6.0",
    "pre-commit>=4.0.0",
    "bandit>=1.8.0",
    "pytest-xdist>=3.6.0",
    "factory-boy>=3.3.0",
]

# PyTorch index configuration for CPU and GPU variants
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
# CPU and GPU extras are mutually exclusive
conflicts = [
    [{ extra = "cpu" }, { extra = "gpu" }],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    # GPU extra: use CUDA on Linux/Windows, fall back to PyPI (CPU) on macOS
    { index = "pytorch-cu128", extra = "gpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
rhesis-sdk = { path = "../../sdk", editable = true }
rhesis-penelope = { path = "../../penelope", editable = true }

[tool.hatch.build.targets.wheel]
packages = [
    "src/rhesis",
]

[tool.hatch.metadata]
allow-direct-references = true


[tool.pytest.ini_options]
testpaths = [
    "../../tests/backend",
]
pythonpath = [
    "src",
]
asyncio_default_fixture_loop_scope = "function"
addopts = "-o asyncio_default_fixture_loop_scope=function"
filterwarnings = [
    "ignore::pytest.PytestDeprecationWarning:pytest_asyncio.plugin",
]
markers = [
    "unit: fast tests with mocked dependencies",
    "integration: tests with real external services",
    "slow: tests that take >5 seconds",
    "ai: tests involving AI model calls",
    "critical: core functionality tests",
    "security: security and vulnerability tests",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
