[project]
name = "rhesis-backend"
version = "0.7.0"
description = "Rhesis backend package"
readme = "README.md"
requires-python = ">=3.12"
# Known unpatched vulnerabilities in transitive dependencies:
# - orjson (CVE-2025-67221): no recursion limit for deeply nested JSON. No patch available.
dependencies = [
    # --- Core (used by migrations, Polyphemus, and the full backend) ---
    "rhesis",
    "sqlalchemy",
    "psycopg2-binary==2.9.9",
    "pgvector>=0.3.0",
    "pydantic",
    "alembic",
    "python-dotenv",
    "pyyaml",
    "tomli>=2.0.0",
    "nanoid",
    "PyJWT>=2.12.0",
    "httpx",
    "chardet",
    "tenacity==8.2.3",
    "odata-query==0.10.0",
    "email-validator>=2.0.0",
    "cryptography>=46.0.5",
    "passlib[bcrypt]>=1.7.4",
    "zxcvbn>=4.4.24",
    "bcrypt>=4.0.0,<5.0.0",
    "python-json-logger>=4.0.0",
    # --- Web framework + auth + workers (small/medium, used everywhere) ---
    "fastapi",
    "uvicorn",
    "gunicorn>=21.2.0",
    "python-multipart>=0.0.22",
    "slowapi>=0.1.9",
    "itsdangerous",
    "authlib",
    "celery[redis]==5.5.2",
    "kombu==5.5.3",
    "redis>=5.0.0,<6.0.0",
    "portalocker==3.1.1",
    "websockets==15.0.1",
    "psutil==5.9.5",
    "pyfiglet==1.0.2",
    "yaspin==3.1.0",
    "pathspec==0.12.1",
    "jsonpath-ng==1.7.0",
    "jinja2",
    "faker",
    "openpyxl",
    "pillow>=12.1.1",
    "fastxlsx>=0.2.0",
    # --- OpenTelemetry (small wheels, eagerly imported by main.py) ---
    "opentelemetry-api>=1.32.1",
    "opentelemetry-sdk>=1.32.1",
    "opentelemetry-exporter-otlp-proto-http>=1.32.1",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "protobuf>=6.33.5",
    "proto-plus>=1.26.1",
    # --- MCP server bits (small) ---
    "mcp>=1.2.0",
]

[project.optional-dependencies]
# Heavy ML/AI/cloud extras. These are NOT needed for migrations or for the
# Polyphemus auth/crud import chain, so they stay out of the lightweight
# `migrate` image and out of Polyphemus.
all = [
    "rhesis-sdk",
    "rhesis-penelope",
    "garak>=0.14.0",
    "mirascope==1.24.0",
    "huggingface_hub",
    "google-genai>=1.13.0",
    "gcsfs>=2025.9.0",
    "sendgrid>=6.12.5",
    "mcp-atlassian>=0.13.0",
]
# PyTorch accelerator options - use ONE of these extras
cpu = ["torch>=2.0"]
gpu = ["torch>=2.0"]

[dependency-groups]
dev = [
    "flower>=2.0.1,<3",
    "ruff>=0.11.6",
    "hatch>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.15.0",
    "coverage>=7.6.0",
    "pre-commit>=4.0.0",
    "bandit>=1.8.0",
    "pytest-xdist>=3.6.0",
    "factory-boy>=3.3.0",
]

# PyTorch index configuration for CPU and GPU variants
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
exclude-newer = "1 week"
exclude-newer-package = { torch = false }
# Force minimum versions for transitive dependencies with security advisories
constraint-dependencies = [
    "pyasn1>=0.6.3",
    "orjson>=3.11.7",
    "fastmcp>=2.14.0",
    "langgraph>=1.0.10",
    "tornado>=6.5.5",
]
# garak>=0.13.0 declares datasets<4.0 but ragas (via rhesis-sdk) requires datasets>=4.0.0.
# The existing environment already uses datasets 4.x; this override keeps them compatible.
override-dependencies = [
    "datasets>=4.0.0",
]
# CPU and GPU extras are mutually exclusive
conflicts = [
    [{ extra = "cpu" }, { extra = "gpu" }],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    # GPU extra: use CUDA on Linux/Windows, fall back to PyPI (CPU) on macOS
    { index = "pytorch-cu128", extra = "gpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
rhesis = { path = "../../packages/rhesis" }
rhesis-sdk = { path = "../../sdk", editable = true }
rhesis-penelope = { path = "../../penelope", editable = true }

[tool.hatch.build.targets.wheel]
packages = [
    "src/rhesis",
]

[tool.hatch.metadata]
allow-direct-references = true


[tool.pytest.ini_options]
testpaths = [
    "../../tests/backend",
    "../../tests/notifications",
]
pythonpath = [
    "src",
]
asyncio_default_fixture_loop_scope = "function"
addopts = "-o asyncio_default_fixture_loop_scope=function"
filterwarnings = [
    "ignore::pytest.PytestDeprecationWarning:pytest_asyncio.plugin",
]
markers = [
    "unit: fast tests with mocked dependencies",
    "integration: tests with real external services",
    "slow: tests that take >5 seconds",
    "ai: tests involving AI model calls",
    "critical: core functionality tests",
    "security: security and vulnerability tests",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
